tests/files/lexer_tests/should_fail/065.cmdr
// Illegal character in variable name (ascii 127)
myvar = 127;